# pages

./: .gitmodules  Cargo.toml
config/: base.toml  development.toml  k8s.toml
docker/: Dockerfile.pages  Dockerfile.run  docker-compose.yml
migrations/2018-08-20-000000_create_pages/: up.sql
src/: config.rs  errors.rs  lib.rs  main.rs  schema.rs
src/controller/: mod.rs
src/models/: mod.rs  page.rs
src/repos/: mod.rs  pages.rs  repo_factory.rs
src/services/: mod.rs  pages.rs  service_factory.rs
