[package]
name = "pages"
version = "0.1.0"

[lib]
name = "pages_lib"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.9", default-features = false, features = ["toml"] }
derive_more = "0.11"
diesel = { version = "1.3.3", features = ["postgres", "extras"] }
failure = "0.1"
futures = "0.1"
futures-cpupool = "0.1.7"
geo = { version = "*", features = ["serde"] }
geo-types = { version = "*", features = ["serde"] }
hyper = "0.11"
hyper-tls="0.1"
log = "0.4"
r2d2 = "0.8.1"
rand = "0.5.5"
regex = "0.2"
serde = "1"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
stq_acl = { path = "vendor/libstqbackend/acl" }
stq_api = { path = "vendor/libstqbackend/api" }
stq_db = { path = "vendor/libstqbackend/db" }
stq_http = { path = "vendor/libstqbackend/http" }
stq_logging = { path = "vendor/libstqbackend/logging" }
stq_roles = { path = "vendor/libstqbackend/roles" }
stq_router = { path = "vendor/libstqbackend/router" }
stq_types = { path = "vendor/libstqbackend/types" }
stq_static_resources = { path = "vendor/libstqbackend/static_resources" }
uuid = { version = "*", features = ["use_std", "v4", "serde"] }
validator = "0.7.1"
validator_derive = "0.7.2"
sentry = "0.12"
